@@ -9,7 +9,6 @@
 		<script type="text/javascript" src="static/crypto-js-3.0.2/components/enc-base64-min.js"></script>
 		<script type="text/javascript" src="static/Models.js"></script>
 		<script type="text/javascript" src="static/SaltyNES.js"></script>
-		<script type="text/javascript" src="static/game_database.json"></script>
 		<script type="text/javascript" src="static/game_meta_data.json"></script>
 		<script type="text/javascript" src="static/gamepad_database.json"></script>
 		<link type="text/css" media="screen" rel="Stylesheet" href="static/styles.css" />
@@ -156,7 +155,7 @@
 					<div id="game_add_drop">
 						<p>Drop games here</p>
 					</div>
-		
+
 					<div id="game_add_progress">
 						<p>Loading ...</p>
 						<img src="static/loading.gif" />
